# automation-server

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Dockerfile  LICENSE  README.md  alembic.ini  alembic.ini.docker  ats.code-workspace  automation_backup.db  docker-compose.override.yml  docker-compose.prod-example.yml  docker-compose.yml  nginx.conf  requirements.txt  roadmap.md
alembic/: env.py  (+1 more)
automation_server_client/: README.md  pyproject-poetry.toml  pyproject.toml
automation_server_client/automation_server_client/: LICENSE  __init__.py  _config.py  config.py  logging.py
automation_server_client/src/automation_server_client/: __init__.py  _logging.py  _models.py  _server.py
automation_server_client/tests/: test_config.py
backend/: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0dc924f3af5c_add_incident_table.py  381e4f9d0ff7_added_data_text_field_to_credentials.py  709b9d181fe8_add_commandline_parameter_to_session.py  87a8aa53b776_add_commandline_parameter.py  9359bc77847e_add_work_duration_tracking_fields_to_.py  95f5482ed959_improve_session_log.py  a6a43aaa3cf5_make_name_column_unique_in_workqueue.py  a967e43074d6_rename_sessionlog_table_to_auditlog.py  b3f1a2c4d5e6_add_workitem_workqueue_id_status_index.py  c0f22b1d3fa0_initial_autogeneration.py  d41f7c9e2b10_add_git_options_to_process.py  e7c1f0a2b9d4_add_auto_clean_max_age_days_to_workqueue.py  ef0032495a23_added_unique_attribute_to_credential_.py
backend/app/: config.py  enums.py  main.py  scheduler.py  scheduler_backup.py
backend/app/api/: health_router.py  token_router.py
backend/app/api/v1/: __init__.py  accesstoken_router.py  audit_log_router.py  credentials_router.py  dependencies.py  incident_router.py  log_router.py  process.py  process_router.py  resource.py  resource_router.py  schemas.py  session.py  session_router.py  sessionlog_router.py  trigger.py  trigger_router.py  workitem.py  workitem_router.py  workqueue.py  workqueue_router.py
backend/app/database/: crypto.py  models.py  session.py  unit_of_work.py
backend/app/database/repository/: __init__.py  access_token_repository.py  auditlog_repository.py  credential_repository.py  database_repository.py  (+8 more)
backend/app/scheduler/: __init__.py  core.py  dispatcher.py  upcoming_calculator.py  utils.py  validators.py
backend/app/security/: oauth2.py
backend/app/services/: __init__.py  auditlog_service.py  incident_service.py  resource_service.py  session_service.py  workqueue_service.py
backend/benchmarks/: README.md  locustfile.py  seed.py
backend/scripts/: entry-point.sh
backend/tests/: __init__.py  conftest.py  test_accesstokens.py  test_auditlog.py  test_credentials.py  test_crypto.py  test_health.py  test_incidents.py  test_process.py  test_resource.py  test_session.py  test_session_service.py  test_sessionlog.py  test_sessions.py  test_sessionservice.py  test_triggers.py  test_workitems.py  test_workqueue.py
backend/tests/scheduler/: __init__.py  test_core.py  test_utils.py  test_validators.py
worker/: .dockerignore  Dockerfile  Dockerfile.playwright  build-playwright.sh  build-standard.sh  main.py  pyproject.toml  requirements.txt  worker.py
worker/automationclient/: __init__.py  resources.py  sessions.py
worker/runners/: python.py
(+159 files in other folders)
