[project]
name = "automation_server_backend"
version = "0.1.0"
description = "The Automation Server Backend - run api services and manages the database"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>1.0.0,<2.0",
    "cronsim",
    "fastapi>0.110.0,<1.0",
    "httpx<1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>2.0.0,<3.0",
    "pydantic-settings>2.0.0,<3.0",
    "python-multipart<1.0",
    "requests>2.0,<3.0",
    "sqlmodel>0.0.16,<1.0",
    "uvicorn>=0.32.1,<1.0",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
